SCRUM-4 :white_check_mark: Test: System.out 제거 및 코드 서식 개선